MEC Dev Sandbox/MEC Dev Sandbox/src/objects/Stock_line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quanitiy__c</fullName>
        <label>Quanitiy</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_ID__c</fullName>
        <label>Stock</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Stock line Items</relationshipLabel>
        <relationshipName>Stock_line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock line Items</label>
    <nameField>
        <label>Stock line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>